--- a/public/styling.css
+++ b/public/styling.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: nFont;
-    src: url(/nFont.otf);
+    src: url(public/nFont.otf);
 }
 
 
@@ -12,18 +12,14 @@ body {
 
 }
 
-.wrapper {
+#spotiPanel {
     padding: 50px;
     width: 25%;
     height: 300px;
     background-color: #1DB954;
     border-radius: 10px;
-
-
-
     margin-left: 35%;
     margin-top: 10%;
-
 }
 
 
