--- a/public/styling.css
+++ b/public/styling.css
@@ -70,3 +70,16 @@ h1 {
     margin-left: 35%;
 
 }
+
+h2 {
+    color: #faf9f6c2;
+    font-size: 1em;
+    margin-left: 32%;
+    margin-top: 15%;
+    letter-spacing: 0.1em;
+}
+
+#btnLogin {
+    margin-left: 30%;
+    margin-top: 1%;
+}
