query not parsed dashboard

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet " href="styling.css">
     <link rel="server" href="/SimpleServer.js">
     <title>Spotifetch</title>
+    <script type="module" src="/SimpleServer.js"></script>
 </head>
 
 <h1>Ciao</h1>
