--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet " href="styling.css">
     <link rel="server" href="/SimpleServer.js">
+    <script type="module" src="/SimpleServer.js"></script>
     <title>Spotifetch</title>
 </head>
 
