--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -11,38 +11,8 @@
     <script type="module" src="/SimpleServer.js"></script>
 </head>
 
-<h1>Ciao</h1>
-
-
-
-    <h4>Genre</h4>
-    <select id="Genre" name="Genres">
-        <option value="0">Select Genre:</option>
-        <option value="1">{{display_genre1}}</option>
-        <option value="2">{{display_genre2}}</option>
-        <option value="3">{{display_genre3}}</option>
-        <option value="4">{{display_genre4}}</option>
-    </select>
-
-    <h4>Playlist</h4>
-    <select id="Playlist" name="Playlists">
-        <option value="0">Select_Playlist:</option>
-        <option value="0">{{Select_Playlist1}}</option>
-        <option value="0">{{Select_Playlist2}}</option>
-        <option value="0">{{Select_Playlist3}}</option>
-        <option value="0">{{Select_Playlist4}}</option>
-    </select>
-
-    <h4>Song</h4>
-    <select id="Song" name="Songs">
-        <option value="0">Select Song:</option>
-        <option value="0">{{Select_Song1}}</option>
-        <option value="0">{{Select_Song2}}</option>
-        <option value="0">{{Select_Song3}}</option>
-        <option value="0">{{Select_Song4}}</option>
-    </select>
-    </script>
-
-
-
+<body>
+    <%= user %>
 </body>
+
+</html>
