Login styled in HTML

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -2,17 +2,37 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheets" href="/public/styling.css" type="text/css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet " href="styling.css">
     <link rel="server" href="/SimpleServer.js">
-    <title>Spotifetch</title>
     <script type="module" src="/SimpleServer.js"></script>
+    <title>Dashboard</title>
+
 </head>
 
 <body>
-    <%= user %>
+    <h1>Ciao</h1>
+    <style>
+        @font-face {
+            font-family: nFont;
+            src: url(public/nFont.otf);
+        }
+
+
+
+        body {
+            background-color: #121212;
+            font-family: nFont, sans-serif;
+        }
+
+        h1 {
+            color: #faf9f6;
+            font-size: 5em;
+            margin-left: 35%;
+        }
+    </style>
 </body>
 
 </html>
